media/css/base.css
/* Defaults removed by reset */
strong { font-weight: bold; }
em { font-style: oblique; }
del { text-decoration: line-through; }

body {
	font-family: Georgia, serif;
}

a {
	text-decoration: none;
	color: navy;
}
a:hover { text-decoration: underline; }
a.more { font-weight: bold; }

/* header */

#hd {
	text-align: center;
}

#hd h1 { /* logo */
	background: url("../images/logo3.jpg") no-repeat;
	padding-top: 120px; width: 298px;
	height: 0px;
	overflow: hidden;
	margin: 0 auto 1em auto;
}

#hd .ad { float: left; }
.ad {
	margin: 0 auto;
	display: block;
}
div.right ad { text-align: right; }
#ft .ad { text-align: center; }

#hd ul {
	text-align: right;
	float: right;
	display: block;
}
#hd ul li { display: inline; }
#hd ul li a {
	font-family: Tahoma, sans-serif;
	text-transform: uppercase;
	padding: 1em;
	border: 1px solid #ddd;
	border-bottom: 0;
	background-color: #eee;
	position: relative;
	z-index: 10;
}
#hd ul li a:hover {
	background-color: #f8f8f8;
	text-decoration: none;
}
#hd ul li strong a {
	background-color: white;
	border-bottom: 1px solid white;
}

#hd div {
	float: right;
	text-align: left;
	padding: 1em;
	margin: 1em 0;
	border: 1px solid #ddd;
	width: 750px;
	height: 95px;
	background-color: white;
}

/* main */

h1 {
	margin-top: 0.5em;
	font-size: 250%;
	letter-spacing: 0.02em;
}

h2 { /* deck */
	margin-top: 0.25em;
	font-size: 150%;
	font-style: oblique;
}

h3 {
	font-weight: bold;
	font-size: 120%;
	letter-spacing: 0.01em;
	margin-top: 1em;
}

.right {
	text-align: right;
}

.copy {
	margin: 1em 0;
	font-size: 110%;
	line-height: 175%;
}
.copy p {
	text-align: justify;
	text-indent: 2em;
	padding-bottom: 0.5em;
}
p.first { /* :first-child isn't adequate here */
	text-indent: 0;
}
.drop { /* nor is :first-letter capable; might be several letters */
	font: normal 6em/0.85em serif;
	display: block;
	float: left;
}

.credit {
	font-family: Tahoma, sans-serif;
	text-transform: uppercase;
}
.credit a {
	font-weight: bold;
}
.sources {
	text-align: right;
	font-style: oblique;
}

img {
	border: 1px solid black;
}
.image {
	margin: 1em;
}
.image p { /* cutline */
	font-weight: bold;
	margin-top: 0.5em;
	text-align: justify;
}
.image p a {
	font-weight: normal;
}
.image ul { /* credit */
	text-align: right;
}
.image ul li {
	font: normal 75%/100% Tahoma, sans-serif;
	text-transform: uppercase;
}

.preview h1 {
	font-size: 200%;
}

hr {
	color: white;
	background-color: white;
	border: thin dotted gray;
	border-style: none none dotted;
}

/* bottom */

.comments li { margin: 1.5em 0; }
.comments p { line-height: 170%; }
.comments span { /* comment meta */
	color: #555;
	font-style: oblique;
}
.comments span em { font-style: normal; }

.comments div { /* reply box */
	margin: 0 0 2em 2em;
	padding: 0.5em;
	background-color: #eee;
}
.comments div h3 { margin-top: 0; }

label.error {
	color: red;
	margin: 0.5em;
}

form th {
	vertical-align: top;
	padding: 0.2em 1em;
	text-align: right;
}

#ft {
	margin-top: 1em;
	color: gray;
}

